Fix line spacing on About page

--- a/src/views/About/About.css
+++ b/src/views/About/About.css
@@ -5,6 +5,8 @@ nav {
   color: black;
   padding-bottom: 100%;
   background-color: rgba(52, 73, 94, 1);
+  line-height: 2;
+  /*text-indent: 2em;*/
 }
 
 .about-text {
